mediator, memento